--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">
   <!-- Load Styles -->
   <link href="css/styles.css" rel="stylesheet">
+  <script src="js/app.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
     a data attribute that will populate the li node.
     Adding more sections will automatically populate nav.
     The first section is set to active class by default -->
-    <section id="section1" data-nav="Section 1" class="your-active-class">
+    <section id="section1" data-nav="Section 1" class="active">
       <div class="landing__container">
         <h2>Section 1</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum metus faucibus lectus pharetra
@@ -81,8 +82,6 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
-
-  <script src="js/app.js"></script>
 </body>
 
 </html>
