--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Manipulating the DOM</title>
   <!-- Load Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Fira+Sans:900|Merriweather&display=swap"
+    rel="stylesheet">
   <!-- Load Styles -->
   <link href="css/styles.css" rel="stylesheet">
   <script src="js/app.js"></script>
@@ -22,6 +23,13 @@
       <ul id="navbar__list"></ul>
     </nav>
   </header>
+  <div id="overlays">
+    <div id='scroll-top' class="hidden">
+      <span class="material-icons md-48 arrow">
+        arrow_upward
+      </span>
+    </div>
+  </div>
   <main>
     <header class="main__hero">
       <h1>Landing Page </h1>
